fix body width on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -29,7 +29,7 @@ body {
     background-color: $background-color;
     margin: auto;
     padding: 0;
-    width: 100%;
+    width: 95%;
     line-height: 1.5;
 
     a {
